# cloakpii

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  ML_SETUP.md  Makefile  PROJECT_SUMMARY.md  README.md  ROADMAP.md  TASK_BREAKDOWN.md  cloakpii  mkdocs.yml  offshore-migrator  pyproject.toml  requirements.txt  run-with-ml.sh  v1.2.0_progress.md
.github/workflows/: ci.yml  docs.yml  release.yml
config/: china.yaml  singapore.yaml
docs/: COMPLIANCE_GUIDE.md  RESEARCH_REPORT.md  cli.md  compliance.md  configuration.md  faq.md  formats.md  index.md  installation.md  llms.txt  modes.md  robots.txt  security.md
examples/: Cross_Border_Transfer_Contract_Checklist.md  PDPA_30Day_Access_Request_Checklist.md  PDPA_DPO_Appointment_Checklist.md  PIPL_Security_Assessment_Checklist.md  PIPL_Sensitive_Data_Handling_Checklist.md  compliance_report_pdpa_v1.1.json  compliance_report_pipl.json  compliance_report_pipl.md  compliance_report_pipl_v1.1.json  pdpa_compliance_report.md  pipl_compliance_report.md  pipl_security_assessment_template.json  sample_china_pii.csv  sample_cross_border.xlsx  sample_sg_nric.json
skillhub/cloakpii/: README.md  SKILL.md
src/: offshore_migrator.py
src/cloakpii/: __init__.py  __main__.py  _deps.py  audit.py  cli.py  compliance.py  config.py  crypto.py  db.py  exceptions.py  integrity.py  migrate.py  pii.py  pii_ml.py  tokenize.py
src/offshore_migrator/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  migrate.py  pii.py  pii_ml.py  state.py
tasks/: coder_implementation.md  operator_execution.md  researcher_pIPL_PDPA.md
tests/: test_compliance_report.py  test_comprehensive.py  test_confidence.py  test_crypto.py  test_db.py  test_field_policies.py  test_incremental.py  test_integrity.py  test_migrate.py  test_new_features.py  test_optimizations.py  test_optional_deps.py  test_pIPL_pdpa.py  test_pii.py  test_route_a.py  test_security.py  test_streaming.py  test_tokenize.py  test_v16_fixes.py
