[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloakpii"
dynamic = ["version"]
description = "PII desensitization + AES-256-GCM encryption + compliance reporting for cross-border data transfers (PIPL / PDPA / GDPR)"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Hellotravisss"}]
requires-python = ">=3.10"
keywords = ["pii", "data-masking", "encryption", "compliance", "pipl", "pdpa", "gdpr", "data-privacy", "cross-border"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cryptography>=42.0",
    "defusedxml>=0.7",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
    "pyarrow>=14.0",
    "tqdm>=4.60",
]

[project.urls]
Homepage = "https://github.com/Hellotravisss/cloakpii"
Repository = "https://github.com/Hellotravisss/cloakpii"
Changelog = "https://github.com/Hellotravisss/cloakpii/blob/main/CHANGELOG.md"
Issues = "https://github.com/Hellotravisss/cloakpii/issues"

[project.scripts]
cloakpii = "cloakpii.cli:main"

[tool.setuptools.dynamic]
version = {attr = "cloakpii.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
