[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloakpii"
dynamic = ["version"]
description = "PII desensitization + AES-256-GCM encryption + compliance reporting for cross-border data transfers (PIPL / PDPA / GDPR)"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Hellotravisss"}]
requires-python = ">=3.10"
keywords = ["pii", "data-masking", "encryption", "compliance", "pipl", "pdpa", "gdpr", "data-privacy", "cross-border"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: English",
    "Natural Language :: Chinese (Simplified)",
]
dependencies = [
    "cryptography>=42.0",
    "defusedxml>=0.7",
    "pyyaml>=6.0",
    "tqdm>=4.60",
]

[project.optional-dependencies]
# Format backends are optional so the base install stays light (pyarrow alone is
# ~100 MB). CSV / JSON / XML / TSV / SQLite / text work with no extra.
parquet = ["pyarrow>=14.0"]
excel = ["openpyxl>=3.1"]
postgres = ["psycopg>=3.1"]
mysql = ["PyMySQL>=1.1"]
all = ["pyarrow>=14.0", "openpyxl>=3.1", "psycopg>=3.1", "PyMySQL>=1.1"]
dev = [
    "pytest>=7.0", "pytest-cov", "ruff", "build", "twine", "bandit[toml]",
    "pip-audit", "pyarrow>=14.0", "openpyxl>=3.1",
]

[project.urls]
Homepage = "https://github.com/Hellotravisss/cloakpii"
Documentation = "https://hellotravisss.github.io/cloakpii/"
Repository = "https://github.com/Hellotravisss/cloakpii"
Changelog = "https://github.com/Hellotravisss/cloakpii/blob/main/CHANGELOG.md"
Issues = "https://github.com/Hellotravisss/cloakpii/issues"

[project.scripts]
cloakpii = "cloakpii.cli:main"

[tool.setuptools.dynamic]
version = {attr = "cloakpii.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.bandit]
# Audited false positives:
#   B608 (SQL via f-string): table/column identifiers are validated with
#     str.isidentifier() and double-quoted before interpolation
#     (see desensitize_sqlite, db._quote, _preview_sqlite).
#   B314 (ElementTree): XML is parsed with defusedxml when available, with a
#     DOCTYPE-stripping fallback for the rare no-defusedxml case (desensitize_xml).
skips = ["B608", "B314"]
